Optimized and simplified EntityMeta